--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,4 @@ jobs:
           java-version: 17
 
       - name: Run tests
-        run: ./gradlew clean test
+        run: SELENIDE_URL="${{ vars.SELENIDE_URL }}" ./gradlew clean test
