--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,8 @@
-name: Run tests
+name: Run tests and publish the report
 on: [push]
+
+permissions: write-all
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -14,3 +17,27 @@ jobs:
 
       - name: Run tests
         run: SELENIDE_URL="${{ vars.SELENIDE_URL }}" ./gradlew clean test
+
+      - name: Load test report history
+        uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.10
+        if: always()
+        with:
+          gh_pages: gh-pages
+          allure_history: allure-history
+          allure_results: build/allure-results
+
+      - name: Publish test report
+        uses: peaceiris/actions-gh-pages@v4
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
