--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,15 @@ jobs:
       - name: Run tests
         run: ./gradlew clean test
 
+      - name: Publish actions report
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Gradle Tests
+          path: '**/build/test-results/test/TEST*.xml'
+          reporter: java-junit
+          fail-on-error: true
+
       - name: Load test report history
         uses: actions/checkout@v4
         if: always()
@@ -26,7 +35,7 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-      - name: Build test report
+      - name: Build allure test report
         uses: simple-elf/allure-report-action@v1.10
         if: always()
         with:
@@ -34,7 +43,7 @@ jobs:
           allure_history: allure-history
           allure_results: build/allure-results
 
-      - name: Publish test report
+      - name: Publish allure test report
         uses: peaceiris/actions-gh-pages@v4
         if: always()
         with:
